--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <strong class="app__title-strong">mergulhe no que importa.</strong>
             </h1>
             <figure class="app__image-figure">
-                <img class="app__image" src="/imagens/gengar3.jpg" alt="">
+                <img class="app__image" src="/imagens/foco.png" alt="">
             </figure>
         </section>
         <section class="app__section-card-container">
@@ -69,10 +69,11 @@
                 </div>
             </div>
         </section>
+        
 
         <footer class="app__footer">
             <p class="app__footer-text">
-                Projeto feito por João Victor Cordeiro
+                Projeto criado por João Victor Cordeiro
             </p>
         </footer>
     </main>
