--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@
 
         <footer class="app__footer">
             <p class="app__footer-text">
-                Projeto criado por João Victor Cordeiro
+                Projeto criado por João Victor Cordeiro 
+                Fase de testes
             </p>
         </footer>
     </main>
