--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 </ul>
                 <div class="app__card-primary-button-wrapper">
                     <button id="start-pause" class="app__card-primary-button">
-                        <img class="app__card-primary-button-icon" src="/imagens/play_arrow.png" alt="">
+                        <img class="app__card-primary-button-icon" src="/imagens/play_arrow.png" alt="Play">
                         <span>Começar</span>
                     </button>
                 </div>
@@ -74,7 +74,6 @@
         <footer class="app__footer">
             <p class="app__footer-text">
                 Projeto criado por João Victor Cordeiro 
-                Fase de testes
             </p>
         </footer>
     </main>
